--- a/automationUsingConstructor/package.json
+++ b/automationUsingConstructor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AutomationUsingConstructor",
+  "name": "jspageobject",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
